# python-project-template

./: .coveragerc  .pre-commit-config.yaml  README.md  init_project.py  pyproject.toml
.github/workflows/: ci.yml  sync.yml  test.yml
src/project_name/: main.py
src/your_package/: __init__.py  core.py  main.py
tests/: test_core.py  test_drive.py  test_example.py  test_helpers.py  test_main.py  test_sheets.py  test_spotify.py  test_step_0_normalize.py  test_step_1_move_google_sheets_by_year.py  test_step_2_convert_csv_to_gsheets.py  test_step_3_generateNextSummary.py  test_step_4_dedup.py  test_step_5_generateCompleteSummary.py  test_sync.py
tests/project_name/: test_import_common_utils.py
